# tt-qb-lights

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  SUCCESS.md  config.toml  install.sh  openrgb.service  tt-qb-lights.service
src/: config.rs  lib.rs  main.rs
src/monitoring/: mod.rs  sensors.rs  tenstorrent.rs
src/rgb/: color_mapping.rs  mod.rs  openrgb.rs  openrgb_cli.rs
tests/: color_schemes.rs  config_loading.rs  temperature_mapping.rs
