[package]
name = "tt-qb-lights"
version = "0.1.0"
edition = "2021"
authors = ["Tenstorrent User"]
description = "RGB lighting controller for Tenstorrent hardware based on temperature and power metrics"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Parsing and serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Color manipulation
palette = "0.7"

# Directory utilities
dirs = "5"

# OpenRGB client (we'll check if this exists, otherwise implement TCP client)
# openrgb = { version = "0.2", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
